--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -36,7 +36,7 @@
   /*
     Home Icon Image
   */
-  --home-icon-image: url(https://imgur.com/K5x6V7A.jpg);
+  --home-icon-image: url(https://i.imgur.com/K5x6V7A.jpg);
 
   /*
     Change your friends icon image position
